Continue adding chngs to html and css.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,74 @@
-/* 
+html{
+  font-size: 18px;
+  background-color: white;
+}
+
+body{
+  font-family: Helvetica, "sans-serif";
+  line-height: 1.4em;
+}
+
+.container{
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+h1,  h3{
+  font-weight: bold;
+}
+
+/*  AGENI (HEADER) SECTION */
+
+.agent {
+  background-color: black;
+  color: white;
+}
+
+.agent .container{
+  display: flex;
+  align-items: center;
+  padding: 12px 0 12px 0.5rem;
+
+}
+
+.container .img {
+ height: 24px;
+ padding-right: 16px;
+}
+
+/* MAIN SECTION */
+
+.main{
+  background: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/moto.jpeg");
+  background-size: cover;
+  background-position: center;
+  height: 25rem;
+
+}
+
+.headline{
+  background-color: black;
+  color: white;
+  width: 20rem;
+  padding: 2rem 3rem;
+  position: relative;
+  top: 9em;
+  }
+
+  .headline h1{
+    font-size: 2rem;
+    line-height: 2.5rem;
+    margin: 0.25em 0;
+  }
+
+nav {
+  background-color: firebrick;
+  color: white;}
+
+  nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.75rem 0;
+    list-style: none;
+  }
