--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -72,3 +72,58 @@ nav {
     padding: 0.75rem 0;
     list-style: none;
   }
+
+  /* PRODUCT GALLERY SECTION */
+
+  .products, .biz-info {
+    display: flex;
+    justify-content: space-between;
+    margin: 3rem 0 0 0;
+
+  }
+
+  .product {
+    width: 30%;
+  }
+
+  .product-image {
+    border: 4px solid black;
+    padding: 2rem 0;
+    height: 9em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .product-image img {
+    max-width: 8em;
+  }
+
+  .descript {
+    display: block;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+
+}
+
+.info {
+  width: 35%;
+  }
+
+  .info .loc-hrs {
+    display: block;
+    background-color: black;
+    color: white;
+    padding: 1em 2em;
+  }
+
+  /*  FOOTER SECTION */
+
+footer {
+  background-color: black;
+  color: white;
+  padding: 5em 0;
+  margin-top: 4em;
+}
