--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,12 @@ body{
   line-height: 1.4em;
 }
 
+@media only screen and (max-width: 1024px) {
+  body {
+    font-size: 16px;
+  }
+}
+
 .container{
   max-width: 960px;
   margin: 0 auto;
@@ -61,6 +67,23 @@ h1,  h3{
     margin: 0.25em 0;
   }
 
+  @media only screen and (max-width 470px) {
+    .main {
+      height: 15em;
+    }
+    .headline {
+      width: 100%;
+      top: 10em;
+      padding: 1em 2em;
+    }
+    .headline h4 {
+      font-size: 0.77rem;
+    }
+    .headline h1 {
+      font-size: 1rem;
+    }
+  }
+
 nav {
   background-color: firebrick;
   color: white;}
@@ -73,6 +96,20 @@ nav {
     list-style: none;
   }
 
+.mobiletainer {
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+  nav ul {
+    display: none;
+  }
+
+.mobiletainer {
+  display: block;
+  text-align: center;
+ }
+}
   /* PRODUCT GALLERY SECTION */
 
   .products, .biz-info {
@@ -119,6 +156,37 @@ nav {
     padding: 1em 2em;
   }
 
+@media only screen and (max-width: 1024px;) {
+  .products {
+    width: 47%;
+  }
+    .product-glasses {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .products, .biz-info {
+    flex-wrap: wrap;
+  }
+
+  .product {
+    width: 90%;
+    margin: auto;
+    padding-bottom: 0.75em;
+  }
+
+  .product-watch {
+    display: none;
+  }
+
+  .info {
+    width: 90%;
+    margin: 0.5em auto;
+  }
+}
+
+
   /*  FOOTER SECTION */
 
 footer {
@@ -126,4 +194,10 @@ footer {
   color: white;
   padding: 5em 0;
   margin-top: 4em;
+}
+
+@media only screen and (max-width: 470px) {
+  footer {
+    text-align: center;
+  }
 }
